--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -22,6 +22,7 @@
       { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
       { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
       { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
+      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
       { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
       { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
       { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
@@ -31,29 +32,65 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600)
+
+    console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const names = inventors.map(inventor => inventor.first + ' ' + inventor.last);
 
+    console.log(names);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.sort((a, b) => (a.year > b.year) ? 1 : -1)
 
+    console.table(ordered);
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const yearsLived = inventors.reduce((total, inventor) => {
+      return (total + (inventor.passed - inventor.year))
+    }, 0)
 
+    console.log(yearsLived);
     // 5. Sort the inventors by years lived
+    const oldest = inventors.sort(function(a, b) {
+      const last = a.passed - a.year;
+      const next = b.passed - b.year;
+      return last > next ? -1 : 1
+    })
 
+    console.table(oldest);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //             .map(link => link.textContent)
+    //             .filter((street) => street.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const byName = people.sort(((a, b) => {
+      const [alast, afirst] = a.split(', ');
+      const [blast, bfirst] = b.split(', ');
+      return alast > blast ? 1: -1;
+    }));
 
+    console.log(byName);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const instances = data.reduce((obj, item) => {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+
+    console.log(instances);
   </script>
 </body>
 </html>
