--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -72,13 +72,21 @@
 
   <script>
     const secondHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
     function setDate() {
       const now = new Date();
+
       const seconds = now.getSeconds();
       const secondsDegrees = ((seconds / 60) * 360) + 90;
+
+      const minutes = now.getMinutes();
+      const minDegrees = ((minutes / 60) * 360) + 90;
+
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`
-      console.log(seconds);
+      minHand.style.transform = `rotate(${minDegrees}deg)`
+      console.log(minutes);
     }
     setInterval(setDate, 1000)
   </script>
