--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -84,9 +84,13 @@
       const minutes = now.getMinutes();
       const minDegrees = ((minutes / 60) * 360) + 90;
 
+      const hours = now.getHours();
+      const hourDegrees = ((hours / 12) * 360)+ 90;
+
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`
       minHand.style.transform = `rotate(${minDegrees}deg)`
-      console.log(minutes);
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`
+      console.log(hours);
     }
     setInterval(setDate, 1000)
   </script>
